# sedp-reports

./: .gitignore  pyproject.toml
src/sedp_reports/: grant-report.py  helpers.py  kaomi-report.ipynb  pbgsi-number-of-institutions.ipynb  sedp-data-anomalies.ipynb  sedp-report.ipynb
src/sedp_reports/configs/: approval_status.csv  boards.csv  boundary_type.csv  building_condition_type.csv  building_type.csv  emis_submission_types.csv  fiscal_years.csv  geographical_locations_type.csv  higest_levels.csv  institution_type.csv  management_types.csv  mpo_status.csv  ownership_type.csv  pass_rate_type.csv  sexual_harassment_committee_activity_type.csv  student_types.csv  students_attendance_type.csv  teachers_attendance_type.csv  technical_type.csv  ward_type.csv
src/sedp_reports/data/: assigned_inst_bkp.xlsx  buildings_and_library.xlsx  buildings_bkp.xlsx  compliance_1_bkp.xlsx  compliance_2_bkp.xlsx  compliance_3_bkp.csv  compliance_3_bkp.xlsx  compliance_4_bkp.xlsx  districts_bkp.csv  districts_bkp.xlsx  divisions_bkp.csv  divisions_bkp.xlsx  dual_assignments_bkp.csv  dual_assignments_bkp.xlsx  geographical_facilities_bkp.xlsx  pbgsi_7000_ins_bkp.csv  pbgsi_7000_ins_bkp.xlsx  thanas_bkp.csv  thanas_bkp.xlsx  type_and_level_bk.csv  type_and_level_bk.xlsx  users_bkp.csv
