[project]
name = "sedp-reports"
version = "0.1.0"
description = ""
authors = [
    {name = "Monjur-E-Morshed",email = "monjurmorshed793@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sedp_reports", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
